classDiagram
  direction LR

  class BaseEntity {
    +Guid Id
    +DateTime CreatedAt
    +DateTime UpdatedAt
    +DateTime nullable DeletedAt
    +Guid nullable CreatedBy
    +Guid nullable UpdatedBy
  }
  class Tenant {
    +string Code
    +string Name
    +TenantStatus Status
  }
  class User {
    +string Email
    +string PasswordHash
    +UserStatus Status
    +bool EmailVerified
  }
  class Organization {
    +Guid TenantId
    +string Name
    +OrgStatus Status
  }
  class OrganizationMember {
    +Guid OrganizationId
    +Guid UserId
    +OrgRole Role
    +MemberStatus Status
  }
  class Project {
    +Guid TenantId
    +Guid OrganizationId
    +string Code
    +string Name
    +ProjectStatus Status
    +Date StartDate
    +Date DueDate
    +decimal ProgressPercent
  }
  class ProjectMember {
    +Guid ProjectId
    +Guid UserId
    +ProjectRole Role
    +bool CustomerSafeAccess
  }
  class TaskItem {
    +Guid ProjectId
    +Guid nullable ParentTaskId
    +Guid nullable SprintId
    +string Title
    +TaskStatus Status
    +Priority Priority
    +Visibility Visibility
    +DateTime nullable DueAt
    +decimal ProgressWeight
  }
  class TaskAssignment {
    +Guid TaskId
    +Guid UserId
    +AssignmentRole Role
  }
  class TaskDependency {
    +Guid TaskId
    +Guid DependsOnTaskId
    +DependencyType Type
  }
  class StatusChangeRequest {
    +Guid TaskId
    +TaskStatus FromStatus
    +TaskStatus ToStatus
    +ApprovalStatus ApprovalStatus
    +string Reason
  }
  class TaskEvidence {
    +Guid TaskId
    +Guid FileId
    +EvidenceType Type
  }
  class KanbanBoard {
    +Guid ProjectId
    +string Name
  }
  class KanbanColumn {
    +Guid BoardId
    +string Name
    +int SortOrder
    +int nullable WipLimit
    +TaskStatus nullable MappedStatus
  }
  class Sprint {
    +Guid ProjectId
    +string Name
    +SprintStatus Status
    +Date StartDate
    +Date EndDate
  }
  class ChatRoom {
    +Guid ProjectId
    +RoomType Type
  }
  class ChatMessage {
    +Guid RoomId
    +Guid SenderId
    +string Content
    +MessageType Type
  }
  class Meeting {
    +Guid ProjectId
    +DateTime StartAt
    +MeetingStatus Status
  }
  class WikiPage {
    +Guid ProjectId
    +string Slug
    +PageStatus Status
  }
  class WikiPageVersion {
    +Guid PageId
    +int VersionNo
    +string ContentMarkdown
  }
  class FileAsset {
    +Guid TenantId
    +string StorageKey
    +string MimeType
    +long SizeBytes
  }
  class AiKnowledgeDocument {
    +Guid ProjectId
    +string SourceEntity
    +Guid SourceId
    +SyncStatus SyncStatus
  }
  class AiKnowledgeChunk {
    +Guid DocumentId
    +int ChunkIndex
    +string QdrantPointId
  }
  class AuditLog {
    +Guid TenantId
    +Guid nullable ActorUserId
    +string Action
    +string EntityType
    +Guid EntityId
    +string CorrelationId
  }

  BaseEntity <|-- Tenant
  BaseEntity <|-- User
  BaseEntity <|-- Organization
  BaseEntity <|-- Project
  BaseEntity <|-- TaskItem
  BaseEntity <|-- Sprint
  BaseEntity <|-- ChatRoom
  BaseEntity <|-- WikiPage
  BaseEntity <|-- FileAsset
  BaseEntity <|-- AuditLog
  Tenant "1" --> "many" Organization
  Tenant "1" --> "many" User
  Organization "1" --> "many" OrganizationMember
  User "1" --> "many" OrganizationMember
  Organization "1" --> "many" Project
  Project "1" --> "many" ProjectMember
  User "1" --> "many" ProjectMember
  Project "1" --> "many" TaskItem
  TaskItem "1" --> "many" TaskAssignment
  User "1" --> "many" TaskAssignment
  TaskItem "1" --> "many" TaskDependency : outgoing
  TaskItem "1" --> "many" StatusChangeRequest
  TaskItem "1" --> "many" TaskEvidence
  FileAsset "1" --> "many" TaskEvidence
  Project "1" --> "many" KanbanBoard
  KanbanBoard "1" --> "many" KanbanColumn
  Project "1" --> "many" Sprint
  Sprint "1" --> "many" TaskItem
  Project "1" --> "many" ChatRoom
  ChatRoom "1" --> "many" ChatMessage
  User "1" --> "many" ChatMessage
  Project "1" --> "many" Meeting
  Project "1" --> "many" WikiPage
  WikiPage "1" --> "many" WikiPageVersion
  Project "1" --> "many" AiKnowledgeDocument
  AiKnowledgeDocument "1" --> "many" AiKnowledgeChunk
  Tenant "1" --> "many" AuditLog
